[package]
name = "queryer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
tracing = "0.1.34"
reqwest = "0.11.10"
sqlparser = "0.17.0"
tokio = { version = "1.18.2", features = ["full"] }
polars = { version = "0.21.1", features = ["lazy", "bigidx"] }

[dev-dependencies]
tracing-subscriber = "0.3.11"
